# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.27

  - Fix for Bug#95564 (29894324), createDatabaseIfNotExist is not working for databases with hyphen in name.
    Thanks to Lukasz Sanek for his contribution.

Version 8.0.26

  - Fix for Bug#32954396, EXECUTEQUERY HANGS WITH USECURSORFETCH=TRUE & SETFETCHSIZE.

  - Fix for Bug#102372 (32459408), v8.0.23 unusable in OSGi.

  - Fix for Bug#25554464, CONNECT FAILS WITH NPE WHEN THE SERVER STARTED WITH CUSTOM COLLATION.

  - Fix for Bug#100606 (31818423), UNECESARY CALL TO "SET NAMES 'UTF8' COLLATE 'UTF8_GENERAL_CI'".
    Thanks to Marc Fletcher for his contribution.

  - Fix for Bug#102404 (32435618), CONTRIBUTION: ADD TRACK SESSION STATE CHANGE.
    Thanks to William Lee for his contribution.

  - Fix for Bug#95280 (29757140), DATABASEMETADATA.GETIMPORTEDKEYS RETURNS DOUBLE THE ROWS.
    Thanks to Miron Balcerzak for his contribution.

  - Fix for Bug#97269 (30438500), POSSIBLE BUG IN COM.MYSQL.CJ.XDEVAPI.STREAMINGDOCRESULTBUILDER.

  - Fix for Bug#103303 (32766143), JAVA.LANG.CLASSCASTEXCEPTION WHEN INSERTING BLOB WITH SERVER PREPARED STATEMENT.

  - WL#14205, Support query attributes.

  - WL#14411, Support for authentication_kerberos_client authentication plugin.

  - WL#14559, Deprecate TLS 1.0 and 1.1.

  - WL#14391, Migrate QA tests to main repo.

Version 8.0.25

  - This release contains no functional changes and is published to align the version number with the MySQL Server 8.0.25 release.

Version 8.0.24

  - Fix for Bug#102188 (32526663), AccessControlException with AuthenticationLdapSaslClientPlugin.

  - Fix for Bug#22508715, SETSESSIONMAXROWS() CALL ON CLOSED CONNECTION RESULTS IN NPE.

  - Fix for Bug#102131 (32338451), UPDATABLERESULTSET NPE WHEN USING DERIVED QUERIES OR VIEWS.

  - Fix for Bug#101596 (32151143), GET THE 'HOST' PROPERTY ERROR AFTER CALLING TRANSFORMPROPERTIES() METHOD.
